# shimmer

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEMO_GUIDE.md  LICENSE  README.md  TODO-META-PASTEBIN.md  clippy.toml  deny.toml  docker-compose.yml  justfile  lefthook.yml  package-lock.json  package.json  rustfmt.toml
.ai/rules/: rust.mdc  services.mdc  stack-rust.mdc  tauri.mdc
.github/workflows/: release.yml
docs/: DEMO.md
docs/superpowers/plans/: 2026-03-13-production-readiness.md
docs/superpowers/specs/: 2026-03-13-production-readiness-design.md
shimmer-core/: Cargo.toml
shimmer-core/src/: encryption.rs  error.rs  lib.rs  storage.rs
shimmer-server/: Cargo.toml
shimmer-server/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs
shimmer-server/src/routes/: auth.rs  invite.rs  mod.rs  org.rs  paste.rs
shimmer-server/src/services/: auth.rs  invite.rs  mod.rs  org.rs  paste.rs
shimmer-server/src/tui/: mod.rs  setup.rs
shimmer-server/tests/: api_test.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: client.rs  encryption.rs  error.rs  key_store.rs  lib.rs  main.rs  storage.rs
src/routes/: +page.svelte
