[package]
name = "shimmer-server"
version = "0.1.0"
edition = "2021"
description = "Shimmer API gateway — zero-knowledge PHI storage server"

[lints]
workspace = true

[lib]
name = "shimmer_server"
path = "src/lib.rs"

[[bin]]
name = "shimmer-server"
path = "src/main.rs"

[[bin]]
name = "gen-token"
path = "src/bin/gen_token.rs"

[dependencies]
shimmer-core = { path = "../shimmer-core" }

# Web framework
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true }

# Auth
jsonwebtoken = "9"
argon2 = { workspace = true }
sha2 = { workspace = true }

# CLI
clap = { workspace = true }

# Config
toml = "0.8"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Database (metadata — ciphertext stays in blob storage)
rusqlite = { workspace = true }

# Multipart file upload
axum-extra = { version = "0.10", features = ["multipart"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Integration tests
axum-test = "19"
tempfile = "3"
