[package]
name = "shimmer"
version = "0.1.0"
description = "PHI sharing utility - secure, short-lived clipboard URLs"
authors = ["you"]
edition = "2021"

[lints]
workspace = true

[lib]
name = "shimmer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shimmer-core = { path = "../shimmer-core" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
